# SynchClientServer-library

./: .gitignore  LICENSE.txt  README.md
AddInNative_SynchClientServerWindows/: AddInNative_SynchClientServer.sln
AddInNative_SynchClientServerWindows/NativeAPI/: AddInNative.cpp  AddInNative.h  AddInNative.vcxproj  AddInNative.vcxproj.filters  dllmain.cpp
AddInNative_SynchClientServerWindows/NativeAPI/addIn/: stdafx.h
AddInNative_SynchClientServerWindows/NativeAPI/src/: JsonProsessing.cpp  JsonProsessing.h  SynchServer.cpp  SynchServer.h  Utils.cpp  Utils.h
addInclude/: AddInDefBase.h  ComponentBase.h  MANIFEST.xsd  addin.idl  types.h
linux/: CMakeLists.txt  CMakeLists.txt.txt
src/: AddInNative.cpp  AddInNative.h  JsonProsessing.cpp  JsonProsessing.h  SynchServer.cpp  SynchServer.h
windows/: WindowsAddin.sln
windows/WindowsAddin/: WindowsAddin.vcxproj  WindowsAddin.vcxproj.filters  framework.h
КодДемонстрационнойКонфигурации1С/: ConfigDumpInfo.xml  Configuration.xml
КодДемонстрационнойКонфигурации1С/CommonModules/: бит_КомпонентаSynchClientServerКлиентСервер.xml  бит_КомпонентаSynchClientServerЛокализацияКлиентСервер.xml
КодДемонстрационнойКонфигурации1С/Constants/: бит_IPАдресКомпонентыСервера.xml  бит_АдресУтилитыPDFtoTEXT.xml  бит_АдресФайлаЛоговКомпонентыСервера.xml  бит_ЛогироватьРаботуКомпонентыСервера.xml
КодДемонстрационнойКонфигурации1С/InformationRegisters/: бит_ЛогиКомпонентыСервера.xml  бит_ПараметрыКомпонентыСервера.xml
КодДемонстрационнойКонфигурации1С/Subsystems/: бит_ИнтеграцияАнализаторов.xml
(+4 files in other folders)
